# PopulationSimulation

./: LICENSE  README.md  pyproject.toml
PopulationSimulation/: brain.py  creature.py  food.py  main.py  main_dash.py  main_tkinter.py  world.py
tests/: basic_test.py  brain_test.py
