[tool.poetry]
name = "populationsimulation"
version = "0.1.0"
description = ""
authors = ["Cael Atkin-Palmer <caelmap.cap@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pymongo = "^4.3.3"
dash = "^2.10.2"
pandas = "^2.0.2"
plotly = "^5.15.0"
matplotlib = "^3.7.1"
scipy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
